@@ -1613,7 +1613,7 @@ install::
     $(LN) "$(TARGET)-$(1)-$(BYTECODE_RUNTIME_ID)$(EXE)" "$(1)$(EXE)"
 	cd "$(INSTALL_BINDIR)" && \
     $(LN) "$(TARGET)-$(1)-$(BYTECODE_RUNTIME_ID)$(EXE)" \
-	    "$(1)-$(BYTECODE_RUNTIME_ID)$(EXE)"
+	    "$(1)-$(ZINC_RUNTIME_ID)$(EXE)"
 endef
 define INSTALL_RUNTIME_LIB
 ifeq "$(2)" "BYTECODE"
