@@ -127,3 +127,4 @@ ocamlyacc_WSTR_MODULE = @ocamlyacc_wstr_module@
 
 # OCaml release number, relative to 3.12 (used for RuntimeID)
 OCAML_RELEASE_NUMBER = @OCAML_RELEASE_NUMBER@
+ZINC_RUNTIME_ID = @zinc_runtime_id@
